# attractor

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: condition.rs  events.rs  graph.rs  interviewer.rs  main.rs  stylesheet.rs  testing.rs  transform.rs  validation.rs
src/engine/: edge_selection.rs  goal_gate.rs  mod.rs  retry.rs
src/handler/: codergen.rs  conditional.rs  fan_in.rs  manager_loop.rs  mod.rs  parallel.rs  tool.rs  wait_human.rs
src/state/: fidelity.rs  preamble.rs
tests/: e2e_pipeline.rs  parse_real_dot_files.rs
tests/fixtures/: consensus_task.dot  semport.dot
