[package]
name = "attractor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "DOT-based AI pipeline runner"
license.workspace = true
repository = "https://github.com/bkrabach/attractor"
readme = "README.md"
keywords = ["pipeline", "workflow", "ai", "llm", "graph"]
categories = ["development-tools", "asynchronous"]

[dependencies]
unified-llm       = { workspace = true }
coding-agent-loop = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
async-trait  = { workspace = true }
futures      = { workspace = true }
thiserror    = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
tracing      = { workspace = true }
tokio-util   = { workspace = true }
nom          = { workspace = true }
indexmap     = { workspace = true }
clap         = { workspace = true }
tracing-subscriber = { workspace = true }
regex        = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow   = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "attractor"
path = "src/main.rs"
